# electera

./: .github-ci.yaml  .gitignore  .gitlab-ci.yaml  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: ci_workflow.yml
app/: app.py  other_map_draft.py
app/asset/: definitions.py  features.py
app/core/: data_handler.py  state_handler.py  utils.py
app/pages/: about.py  back_testing.py  commune_explorer.py  election_results.py  home.py  map_explorer.py  time_series.py
assets/: delta_pred_features.py  feature_dict.py
config/: app_config.json  backtester.json  counterfactual_config.json  data_processing.json  data_processing_pl.json  download_data.json  explainability.json  train_models.json
config/mappings/: circo_mapping.csv
electera.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/experiments/: challenge_open_data.ipynb  col.csv  feature_selection.py  sanity_checks.ipynb
notebooks/geo/: Compute_distance_cities.ipynb  map_ creator.ipynb  vote_map.ipynb
notebooks/ml/: Classifier_Macron_Lepen_T2_2022.ipynb  boosting_model_core_54_.ipynb  new_data_proc.ipynb  projections.ipynb
notebooks/model/: Compute_correlations_COLLAB.ipynb  Compute_correlations_COLLAB.qmd  Linear_regression.ipynb  Spatial_correlations.ipynb  Spatial_correlations_new.ipynb  model_validation.ipynb  vote_stability.ipynb
notebooks/polls/: test_sondages.ipynb
src/electera.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pipeline/: counterfactuals.py  data_processing.py  (+7 more)
tests/: test_election_predictor.py
(+45 files in other folders)
