[project]
name = "electera"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.5.0",
    "bs4>=0.0.2",
    "catboost>=1.2.10",
    "python-dotenv>=0.9.9",
    "fastparquet>=2026.5.0",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "gpboost>=1.6.7",
    "joblib>=1.5.3",
    "loguru>=0.7.3",
    "lxml>=6.1.0",
    "matplotlib>=3.10.9",
    "mlflow>=3.12.0",
    "numba>=0.60",
    "numpy>=2.4.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "polars>=1.40.1",
    "pre-commit>=4.6.0",
    "pyale>=1.2.0",
    "pyarrow>=23.0.1",
    "pydantic>=2.13.4",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "requests>=2.34.2",
    "ruff>=0.15.13",
    "s3fs>=2026.4.0",
    "scikit-learn>=1.8.0",
    "scikit-optimize>=0.10.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "shapely>=2.1.2",
    "streamlit>=1.20.0",
    "streamlit-folium>=0.27.2",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
    "supertree>=0.5.5",
    "boto3>=1.43.0",
    "polars-distance>=0.5.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
